--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,6 @@
 .segmentMid {
   max-width: 400px;
-  position: "absolute";
-  left: "50%";
-  top: "50%";
-  transform: "translate(-50%, -50%)";
+  text-align: center;
 }
 
 .flexer {
